----------------------------------------------------------------------
 OmegaT 6.1.0
----------------------------------------------------------------------
  44 Enhancement
  68 Bug fixes
   5 Localisation updates
----------------------------------------------------------------------
6.1.0 vs 6.0.0

  Implemented requests:

  - Support for Stardict's Pango content type
  https://sourceforge.net/p/omegat/feature-requests/1727/

  - AbstractFilter should handle BOM when create reader
  https://sourceforge.net/p/omegat/feature-requests/1726/

  -Trim authentication details in team projects
  https://sourceforge.net/p/omegat/feature-requests/1725/

  - Provide package "deb" and "rpm" as distribution format for linux
  https://sourceforge.net/p/omegat/feature-requests/1721/

  - Download team project with a shallow history
  https://sourceforge.net/p/omegat/feature-requests/1720/

  - Give a selection of perHost/PerRespo credentials treatment
  https://sourceforge.net/p/omegat/feature-requests/1719/

  - Enforce checkstyles and suppress it for auto-generated files
  https://sourceforge.net/p/omegat/feature-requests/1717/

  - ResourceBundle Filter: default not to escape Unicode character
  https://sourceforge.net/p/omegat/feature-requests/1716/

  -	Make repository connectors as plugin
  https://sourceforge.net/p/omegat/feature-requests/1715/

  - ResourceBundle filter: "Don't translate NOI18N comment" feature optional
  https://sourceforge.net/p/omegat/feature-requests/1713/

  - Use SLF4J as logging facade framework
  https://sourceforge.net/p/omegat/feature-requests/1710/

  - SVN/Team project should respect access URL specified
  https://sourceforge.net/p/omegat/feature-requests/1707/

  - team: apache HttpClient for git connection
  https://sourceforge.net/p/omegat/feature-requests/1706/

  - Request to add new API to allow plugins/modules to add menu item in requested place
  https://sourceforge.net/p/omegat/feature-requests/1703/
