@@ -39,7 +39,7 @@ pdfbox = "3.0.2"
 maligna = "3.0.1"
 trie4j = "0.9.10_1"
 dsl4j = "0.7.1"
-stardict4j = "0.6.1"
+stardict4j = "0.6.3"
 juniversalchardet = "2.4.0"
 mnemonics = "1.1"
 jmyspell = "1.0.0-beta-2"
