@@ -181,7 +181,11 @@ public class StarDict implements IDictionaryFactory {
             } else if (entry.getType().equals(StarDictDictionary.EntryType.PHONETIC)) {
                 sb.append("<span>(").append(entry.getArticle()).append(")</span>");
             } else if (entry.getType().equals(StarDictDictionary.EntryType.HTML)) {
-                sb.append(entry.getArticle());
+                Document document = Jsoup.parse(entry.getArticle());
+                Safelist safelist = Safelist.relaxed();
+                Cleaner cleaner = new Cleaner(safelist);
+                document = cleaner.clean(document);
+                sb.append(document.body().html());
             } else if (entry.getType().equals(StarDictDictionary.EntryType.PANGO)) {
                 Document document = Jsoup.parse(entry.getArticle());
                 Safelist safelist = new Safelist()
